# casimir

./: .eslintignore  .eslintrc  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  cdk-outputs.json  go.mod  go.sum  go.work  go.work.sum  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: featureuserscdk.yml  promote.yml  pull_request.yml  push.yml  release.yml  sandbox.yml
.husky/: post-merge  pre-commit
apps/app/: .eslintrc  index.html  package.json  tailwind.config.js  tsconfig.json
common/data/: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
common/data/notebooks/: athena.ipynb  consensus.ipynb  diagrams.ipynb  dkg.ipynb  ethereum.ipynb  execution.ipynb  schemas.ipynb  system.ipynb
common/data/notebooks/athena/: main.ipynb
common/data/notebooks/diagrams/: main.ipynb
common/data/scripts/: clean.ts  db.ts  dev.ts  docker-compose.yaml  generate.ts  postgres.ts  watch.ts
common/data/src/: index.ts
common/data/src/interfaces/: JsonSchema.ts
common/data/src/lib/: agg.schema.json
common/data/src/mock/: account.store.json  old.validator.store.json  operator.store.json  user.store.json  validator.store.json
common/data/src/providers/: postgres.ts  schema.ts
common/data/src/schemas/: account.schema.json  action.schema.json  actions.json  agg.schema.json  event.schema.json  nonce.schema.json  operator.schema.json  staking_action.schema.json  user.schema.json  user_account.schema.json  users_accounts.schema.json  wallet.schema.json
content/diagrams/: main.ipynb  pyproject.toml
(+1435 files in other folders)
