[tool.poetry]
name = "data"
version = "0.1.0"
description = "Casimir data notebooks"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyathena = "^2.13.0"
boto3 = "1.21.21"
python-dotenv = "^0.20.0"
s3fs = "^2022.7.1"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
